2007-04-21  Lamar Goddard <lamargoddard@gmail.com>

Reviewed by Darin.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=5262
        <rdar://problem/5018778>
        XMLSerializer drops Namespace information

WebCore:
        Updated WebCore::markup to output namespace information for elements/attributes whose namespace information
        doesn't appear in its scope in the output.

        * WebCore/editing/markup.cpp:
        (WebCore::createMarkup(const Node*, ...)): Changed call to WebCore::markup to match parameters
        (WebCore::markup): Changed recursive call to match tree structure, removed ASSERT and no longer needed includeSiblings parameter.
        (WebCore::startMarkup): Added optional parameter to track namespaces in the current scope.
        (WebCore::addNamespace): Function to add namespace information to markup.
        (WebCore::shouldAddNamespaceAttr):
        (WebCore::shouldAddNamespaceElem): Functions that test whether namespace information should be added for a given node.
        * WebCore/dom/Document.idl:
        (createElementNS):
        (createAttributeNS):
        (getElementsByTagNameNS): Added [ConvertNullToNullString] to namespaceURI parameter.
        * WebCore/dom/Node.cpp:
        (Node::getElementsByTagNameNS): removed test for namespaceURI being null as null can be a valid namespace.

LayoutTests:
        * fast/dom/serialize-nodes-expected.txt: Added.
        * fast/dom/serialize-nodes.xhtml: Added.
        * dom/xhtml/level3/core/nodeisequalnode14-expected.txt: This test fails because
        createAttribute is supposed to create an Attr with localName of null.
        * dom/xhtml/level3/core/nodeisequalnode15-expected.txt: Now succeeds.
        * fast/innerHTML/004-expected.txt: Added namespace information to head and body nodes
        as xhtml nodes now serialize with namespace information.



Canonical link: https://commits.webkit.org/17527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20997 268f45cc-cd09-0410-ab3c-d52691b4dbfc